# ChangeLog for dev-util/cloc
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/cloc/ChangeLog,v 1.13 2014/06/03 11:04:47 nimiux Exp $

  03 Jun 2014; Chema Alonso <nimiux@gentoo.org> cloc-1.60.ebuild:
  Stable for amd64 wrt bug #508384

  22 Mar 2014; Michael Palimaka <kensington@gentoo.org> -cloc-1.58.ebuild:
  Remove old.

*cloc-1.60 (18 Aug 2013)

  18 Aug 2013; Tim Harder <radhermit@gentoo.org> +cloc-1.60.ebuild:
  Version bump.

  09 Jul 2013; Michael Palimaka <kensington@gentoo.org> -cloc-1.55.ebuild,
  -cloc-1.56.ebuild:
  Remove old.

*cloc-1.58 (15 Mar 2013)

  15 Mar 2013; Tim Harder <radhermit@gentoo.org> +cloc-1.58.ebuild:
  Version bump.

*cloc-1.56 (27 Jun 2012)

  27 Jun 2012; Michael Palimaka <kensington@gentoo.org> +cloc-1.56.ebuild,
  metadata.xml:
  Version bump, ading new upstream man page. Add dependencies required for
  operation, and to avoid use of bundled modules. Add upstream metadata.

  22 Dec 2011; Jeroen Roovers <jer@gentoo.org> -cloc-1.53.ebuild,
  -cloc-1.54.ebuild:
  Old.

*cloc-1.55 (14 Oct 2011)

  14 Oct 2011; Tim Harder <radhermit@gentoo.org> +cloc-1.55.ebuild:
  Version bump.

*cloc-1.54 (02 Oct 2011)

  02 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> +cloc-1.54.ebuild:
  Version bump.

*cloc-1.53 (21 Apr 2011)

  21 Apr 2011; Jeroen Roovers <jer@gentoo.org> +cloc-1.53.ebuild:
  Version bump

*cloc-1.50 (10 Jun 2010)

  10 Jun 2010; Patrick Lauer <patrick@gentoo.org> +cloc-1.50.ebuild:
  Bump for #319031

  11 May 2010; Joseph Jezak <josejx@gentoo.org> cloc-1.09.ebuild:
  Marked ~ppc/~ppc64 for bug #310241.

*cloc-1.09 (16 Mar 2010)

  16 Mar 2010; Samuli Suominen <ssuominen@gentoo.org> +cloc-1.09.ebuild:
  Initial commit.