@@ -2,18 +2,27 @@
 Hash: SHA256
 
 DIST cloc-1.60.pl 344405 SHA256 4aa870bef104fd2b8f03c667ef8be2cd671cdf59f46c72046c43ed14e222a05c SHA512 569f789cb5ba4164b4f75e4953d8a5be7cd6fbb83ce0356aa0eb6d1c7d863aac91e131df79d90dbc2319c20757e9f758b55ee76390f7f4511e534c451e1a6913 WHIRLPOOL cb2b1ca35aab8eadb0335bac914e546b744c2246d1afc961eb0d683de7461f031bc12e3725d32ff0bcd29260ad2098fccd5291130d321b242797fd93b3de95cd
+DIST cloc-1.62.pl 374834 SHA256 fa3793b576895cde2acae26a49447bf0c55ab3f79bdacfb00a88fc1d255c2570 SHA512 35ad9c9722b423cfae0c81877d5541175feb9d9c61789e4dc7de7ec35a663e3c519f889c03279c39c61aaca0b7d11c8c64f1962029c76f81034a0e9588bad584 WHIRLPOOL c21f1372b5e86f61ad540fb0cddbc5a4bd96de0f448d134da3a8fcc8fa95591f24416f117a71b9b1f72d7c714bf9a9993ef7a53d3395591588446712fb271b3b
 DIST cloc.1.pod 12468 SHA256 0e6890acd5836ec43aabed1476e2a1417ea4d454968297c68c1b782e818f979b SHA512 50b4085704c7936de9993476195570957c9c5e864f4a2dbac114ff148a813b50ccba0c6e29d5bda4c4e5cd7c7a09e314233438ddd28f0e0585db54975e602659 WHIRLPOOL 25d9b78a7a0fb88f2ff1192afd8cd5963ab61b06883874b8339a1d4fefbeac4b080d413107f06b34975cd2e7ea92e4313767f2c2aebf39e21ef7cd408bf152ae
 EBUILD cloc-1.60.ebuild 811 SHA256 6088fda95837bbfbb21543a5da980baff75b68deeb7ae0945d707f7b0bb615eb SHA512 750de6d0477172db4e9f08f7c911d13a1c40e58577ec3a24477ac07e00614ac31f84187a27451cf6791167d3254d69cf9498ae0246e491445a10683ef3ef82b4 WHIRLPOOL 1e421399e8ccfc7e8be8666bd22cad3c146da77ac53132ef9e433db785119be2d4f1ffd95e7e21b872f21d0a7e8ccb9b7aaa3e786bc445170aa5b9c5f671bd59
-MISC ChangeLog 1758 SHA256 7747506e7d23a8322eec8f7d2475328d5c26ee980998f827b522116ef6a6caee SHA512 fd0c854c9f4eda9ace57e4e0f6be48bce11dd80c1fa2e7a6a2a6cd41a2725d48fc8b589d34cad5eb2374443ba064fa6311200434737269612b8c8210c88bf303 WHIRLPOOL 42dddd8fd2164f62dc0a178c71e02de62839a2ace6ab881cbda44b033f0d8c725aa301d148b667c64e65d177f813e19eebbfc3b77c4f98e4238a8b2aab906d1b
+EBUILD cloc-1.62.ebuild 817 SHA256 4f7b392268c444a879c61daf96811be72701b1b1493873cc32e1ec8f528a6e76 SHA512 0d8c70fbba82656c2af9a0e75842f80a99ad67e69e72c0a0d247e5acfd86bca1664dc2c7dc2af3f0b091ce08d67f87c52645d7784fd8379e5baf75a01cdb2960 WHIRLPOOL cf6cab7b3b3e38e5ba66759cb868b1b421c6184ec1a3260d537e61d1337d62594a99bfbabc19d9669f70de9621a3930472261d7e2606b441209669af604c55a4
+MISC ChangeLog 1880 SHA256 9363aa7fa210a78f55cbaf00c52a3af451c9b7851ebb7f1c58fe90195c0555e8 SHA512 5c20df32d9b3b3f025ad90f1afbca2804842c9830b6e0417edff147d2dc5ed8fa2ab0c8e734ec6352bedf4484d59f2c1c17bc7e55d2f08ee3d60eab914489bd2 WHIRLPOOL 5624fe7b55ecaa1696ffc7b3f126fdb2750210c1d35652bc3e586de7e0c015e215b755288659b12706a0bfd834934ffc71b705113f72f2eed13f9f00d517bcab
 MISC metadata.xml 357 SHA256 e5a1e8ff723c2148b1a7b3fc8d1704fa524aabdce3475cfa6d508bf7ff17bcd4 SHA512 a46ae6c0abb41cd744aa5dbb57f9e1ba1398036040432417549189467745b8dbfd5bd57712d137afd4b8c6eeefd25169837d21cd39f8ec6f1ba54443c81489e1 WHIRLPOOL 5c1d87ef9a76385997e01a954d0b6a1e3a5f8eedf9a7a1f8e2723aaeaf201b2a8c62aaf5138394775306fa85c7e7019fd95a81a289a9448e0373f684f9afc213
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2.0
 
-iQEcBAEBCAAGBQJTjawOAAoJEA2sAkrWKOU2pyIH/jph2OyHBA3uDQuEijdUFi1r
-Yd3+Ss2T20SH7RoSH8LfjpoHaObATrQJPcdsApLSfWuVJmYwuxyn50TGBsceURgX
-RNDF8TebGp0knPrCy4mV3J1ZXRl1W9F8ohYcVp2WQzPSOo3Qa4Gz7DgytpD4t8P/
-/THxGEy244ED/hoU8XbC5F6QSClJF+ICYEKgPL47Z6mdp4wA9dSfGGHEc7bsmShr
-0rv4ejMVCT6u+OB7zPhS68wq0LVoo+FjFtGTNuYEcSf+Dv97hTHuWa0oGM+JZaLy
-ySOhX65jBbi3IEE9/9grVKAmrDAf8TEmegPV64gePcvqCxDCMzTQM94lD2wnCAw=
-=QS05
+iQJiBAEBCABMBQJUpBP3RRSAAAAAABQAKGlzc3Vlci1mcHJAbm90YXRpb25zOTc5
+MTY5NkQ3RDM3NkRBN0U5QjZGMTUwMDZCMUYzOERDQTQ1QTFFQwAKCRAGsfONykWh
+7JFZD/9RS4NFoclfOc2HWIdt3LdAaVCgp4QKcOhj+wAVXBL9EO7L+Muyu0emG43c
+nRPXvKc/vjAqhcpqMarwNBfYPIP46wOqoh277Sicj21YaLGMvif0GgRiM0StnIvH
+6Vv+VqBwMfsueDyeqPj6HE3TDByZqQrcGwqyRg/hQzXrIHFf5+v64m8gmbCjriry
+4u1wkRyvyazN3xB/a98BxE5AtEuViv9V/NTOhKok/S+aRJYSwlTw2Xol3l5QPVa/
+7xxCM3ZUU6/IzLrWryL+BqDU3v2niOBR8Cb4S2YCwOtL6NCXyjfIS7oGKBaYJ0Np
+MLY9fmv3uCVmNV28AiN6vdG33eEJddPAkqgxRBF72p/ukz5h0m79I2pfPBicgWIF
+J4pyDZvExMizYx13u/PdaO4aqVp7kZcm5YXwlerX6AAdekMg8/nuJvYrJaPKH/xx
+918hvTeenfHuM+TdK4oBKzUsRLXYBNFdEmQi/nlBjZYZJmQuvfZuOhFDCm9WxFEf
+SqNCFFOn6RM+vbk4kUZxCWSBxO1AEJc6mGz17utLRJdUNToQUSaLEpcsTaj40PIO
+gF1a7qY/S+gZ7NGg8V34sB9TFzj6XGqxmu5IruC0ogf+DhcDVSrLLHuDeQxLi1Fe
+dA/7tZh2uIsHCJ44++RkqulNiDun0zhxBt/fenv+AfpZXpSTwA==
+=1k5B
 -----END PGP SIGNATURE-----
