@@ -1,14 +1,27 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
+DIST egypt-1.10.tar.gz 4670 SHA256 b5586ad65a491c9cb35252fd45ebbd22b926fd3cc1947513a4dfa58fb6911c64 SHA512 81e98b3d379301f1c0919aeb46d45264772b7d9d77277cb842c8ed7b944d61918e530f4e9e2c56451445dc2c6a312fd76086a81e193540baa3d56f3bb56b438d WHIRLPOOL 4be11ef2bdca52fca70d3b3ef89d4d9215c86681361e90d11c2d18f60a571d792645d909d64897a83274796543af3180fecb62b94c9044cfff2ff9abe44c4903
 DIST egypt-1.9.tar.gz 4607 SHA256 f3be611a97373f92b63f286ea17e4aae23ad62d75938e009448e9b70d97791c7 SHA512 ac2317ed9b34b68a27dde96fb7f6c9230ad6014b761bb2179e26a8e06c588efbb7fe3977ee6b68d2801b117b62f4948bf1584bd4e2d415fb1f1a5c4ad4e06117 WHIRLPOOL 0a5b71bae148daebfca9e7bdb2ad73cba2f8a9d309fcdbb6e3d3de57c279f59af2b5c25d3b63ac33b751dcf5e3c81074e18d68a812903310a5e302274175b48c
+EBUILD egypt-1.10.ebuild 493 SHA256 fc883b9af08f5a378b792123279195d286f00029410ef4d247235cc583030f5e SHA512 cce3d8993be799fba129f1663f86a39f025ef2264db235d100fae6c03873358c43f5f9e87cbee4da4079c770a2e70c178a642ec3e4edc4ba066c65a38d7aaeba WHIRLPOOL db3edd42097bdc46c21ffb27a69c5cd7081e44446f21e5542769a723f3fe7710fccbaa6a28ca1a500bce36fc7abd46f6ae048fc6b1584256011ea6cc69da2d0e
 EBUILD egypt-1.9-r1.ebuild 492 SHA256 6ac1fbbd9cb5792ed73b890ccac37d827d03ebd289e209a2b65a055e6aac851f SHA512 f0b809257b2c6a344b699e14209a4c06461936f8d04f21529ef46e20b79455635d8673aff5fc0cd9d3b723a81cc7aa75c3c581762967f0e74777705589b70769 WHIRLPOOL 4fa6d3fa22f26e51342670a5e9656f43566942246ff792d770e8f4ea0e84ee14084db9f84e071aa6cefb59a0f7ed8c97b760733c6622a9f338218b158f5a3377
-MISC ChangeLog 1162 SHA256 2b50b2f15f1c9c3aecdec18b5f8d45ca3fd117e43b58a1fc473239d45903fc6c SHA512 def2915892f2e5d260926e46ca0d80d86ebb155a18b40d522e54b1619292f2f7d3d76f16b9c6645972fa573822156349ee38487537698cd8c38ba801ea56db25 WHIRLPOOL d785ecab889025898e2da06a713f6ddf75ec06ac9a44198cae51c91baaf814fdf4b7176a9a3025c7f1c019295e0f89da88f962f71890d0011413e26e6139795e
+MISC ChangeLog 1285 SHA256 55367f032e7511eae2ae773923396e5fba58723711d88103ea9b123a88e8994a SHA512 579403c7b5810f83942eb4a2313799a2d0dbf3a1ba358fe2d08ecb3ea99f9b43f8455cd898cad5b3b3063ac618a32219f5a680b3b22c4ce823d8e007c8cc8cec WHIRLPOOL 9876ac3ce20b3b13d73519059ab5f889ae6ac89fa4f8f6201fc009c2d4537bcb0bd28ea075cd301ae5718e39c776d80e786bf46909359a08a5491fcc58d3d848
 MISC metadata.xml 268 SHA256 2089ca59285b2836a6ec1d5aef27f83d580e922212301f0b1eadb04400eb45eb SHA512 8e365ead118785104bc7576a48a106346ef24f5b709349f8ca3d5fb9107a248d0f172e6898fb4ba4b2b7f84e6c8c7960578a2919e1a3692664cb808b16e6b2b2 WHIRLPOOL 255e754b42ff038b07a48321ced9fe6f8acdc99bb85873807b3e902517a1764dabc7152e5ca9ad4d83ab5dc9d3a611f79e6c066121be77aed3cad1b0f3587b73
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0
 
-iEYEAREIAAYFAlIjWZoACgkQso7CE7gHKw2lrACdEUNrFGsTdLch2JT1d3sEKRq/
-APUAnj1PS40qdMSYIG2e8oYmVvm7MJ8T
-=KyTQ
+iQJiBAEBCABMBQJUpBY9RRSAAAAAABQAKGlzc3Vlci1mcHJAbm90YXRpb25zOTc5
+MTY5NkQ3RDM3NkRBN0U5QjZGMTUwMDZCMUYzOERDQTQ1QTFFQwAKCRAGsfONykWh
+7CaaEACq8DF/RP+dJTGDH+hF4+NVWZLr1gm3fljzCehGf6qxXk9qN+eiMWCNiNJB
+ny6bMG/MdSo/yWnBmIjn3gAY3M913wPgh2JJyiH0k3nTf3QFxKL1jFVTqKSWgbah
+3OuupWIXbBM0CxINSK17wbEvc4jAK+tT/nMD3ihXvzoD9u/bKu7ccEYrSLkhIRwE
+dUjJ8Je3FBF4QnQfmOTWiFxQnBLW+kyXNG5tQdXOgfYqGHLcjwdjSeBteKcaDI0J
+zJviJxXXUEBKkBIU1BFDCumb9lDOpRgx4TXQi0fYz457PPO+G62Etd/pSgWg5fjf
+FBL8cbkEaw9T55nWEvE6Ymwbi9ECf+UUdSephpS0BKP2BhuJmqS5+IPlt4OeK7uN
+dFANREmSXHtxerU3pgIENY3pJmAQpH4B1wm+2fehRxKNSCorjO+UrMIk2IpUdstn
+I/ZGxjVIL25Vo3xhwqBUI29OvWXI1nYdXVWBONCIExP6uc8tF3/tt7ahv8W7QeeC
+JnasWxZ1eCEHJ/SMuMm1KkGNlG+XR0XOuynpKYi5v8fjGHG4b0/PL4dovM1khyDP
+l4YQQaCBpSkVozRPPVghtFfto6ellyRN3NBgT9Q4ak0dByC56UXtF7hG9yELHBCK
+EfV9m8fdra0Qj6KivZkXaINk4ZTUkHljPEqjQkrarTXxVe+kJg==
+=4fCp
 -----END PGP SIGNATURE-----
