@@ -1,5 +1,28 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX flawfinder-1.27-whitespace-traceback.patch 685 SHA256 ceb1b89bf48de43abe837c412c4036456dcf3372cc25171674203d6f952a1e46 SHA512 51cc5890cad5bf093c974288b262818fd329ef37c23cf6e974e8b6583434c0f33927daff38ab638800d20323da6920ff2b48c0fbba845c6e85606983a92f6666 WHIRLPOOL 72c05dd534f5ebd21da9dc02276afb190fb3c5261d4541f3cc52b65045209645a79fd0ee06249a14b4ed99aaf1eb415d390e169029849b7b17e89d5cb07a52e5
 DIST flawfinder-1.27.tar.gz 123086 SHA256 8825a9742db29da329ec57861d702a744452f84fbc02f617c037becafaf6f546 SHA512 97f32f20761e361ee5ccda908c2dab489d352ae52438d3f226b784487e732c8a92fcc3b14d3cfe6328e567b6d23501911908612c40fa568010b8d42a302c374d WHIRLPOOL 9f0aaa6cfb4daf5a442754ad422367581e39ec8d73ea87964236554c3b37d075d036146f6af2ce1983e3d0c556e15c29c948d53de3cdf9c8837d3386878795a1
+DIST flawfinder-1.31.tar.gz 174148 SHA256 bca7256fdf71d778eb59c9d61fc22b95792b997cc632b222baf79cfc04887c30 SHA512 880919a05dbf0e29055f052b88c8bbfd403105504749bc65fb17675e6ebe0d84f9cd367e7a6efc68dc0d9209e0938185da4718b70f484007c507fe96b83e0355 WHIRLPOOL 4afd25adf50a1457fb678e84104182bcefbd88bbe3ec5cdc4f44136d5e3dce13da5911acae2edde15cf4fa6193af81a31ab4c2f9daf3463fac0f67a5a5c1c525
 EBUILD flawfinder-1.27-r2.ebuild 852 SHA256 1ccec6eb0f84b9dad971bf5a21c74bc123256dc422d372d7956360f239e015ec SHA512 517ac674383fb3d86f4b8100a5ca228755df2bc4e9f40bb328dbb17a57ac8e3cf4e2d0d31554362e52fdbc6386a3b6aaafdf8089ee655fdf74b76c8394c8376b WHIRLPOOL e81d63b095aea41dd0ec39d6adb435307e0ea544525ad06bfb53c1e2ce2e6c63a149bf06c78b31aa003ba761a8c5d4664b523fca712e786b603abef165e9f0dd
-MISC ChangeLog 2701 SHA256 b9a44fcecefdbe08073b58e92b23b6a5dfca597aab4d1ca67ec66ff4fe014fc4 SHA512 637223aee886a0413e4138cf05158d564e971ac39dbf97706a7ae01b21d72dd15dc0cad8e19c4275f630bb3c992dcbf087fc802dcfa049ef697a83fa9b546bff WHIRLPOOL 8f45d29d07969b378f72cde120fca980bd94ac788233e0f9651c08994dee3e594bbfe98b6da6a1104435bcd68c357284bf111deeea8c9781d0b30a1c9a6fd3ac
+EBUILD flawfinder-1.31.ebuild 845 SHA256 133a7783c6c46f43ce4f03710fd4c4a95a41063be78bf5ebfed395166624b0dc SHA512 e1070c35d242323bc2031d8d7d1a1e6eb1689868d2f4910672fccd3bff7291d3890d01c32da3962a1988423a6bf742edecb48c66506db6e4759a8b2618e3d8e6 WHIRLPOOL 7c8e1db9db13a8ee2e432069ecdbefe077b2c0c8fb8f70679588f406f9a82915e93ed7cc0fb53064bcdd16a28376673674cb176ec024c25c754651d8e38f0a1a
+MISC ChangeLog 2838 SHA256 d9627e36859d77eb145ae2b12af30d5702f4eee1e5a052d16926055dd7d124ed SHA512 7081293024f5d4541853f5bf0aabe7579bf4f7b56b9f6b7e504b6d63e5346b3453c407834fb8488917bce640bc80eba6c2c7eb7e23b847c4a976fc41dc0d4993 WHIRLPOOL 10c112670785c43c310c587fe316741b0a023505028a2cce7789c054f4ef6af59e8953338a582c82900161e967bb0cfe34fa3a739c90527054df5a99946b9172
 MISC metadata.xml 268 SHA256 2089ca59285b2836a6ec1d5aef27f83d580e922212301f0b1eadb04400eb45eb SHA512 8e365ead118785104bc7576a48a106346ef24f5b709349f8ca3d5fb9107a248d0f172e6898fb4ba4b2b7f84e6c8c7960578a2919e1a3692664cb808b16e6b2b2 WHIRLPOOL 255e754b42ff038b07a48321ced9fe6f8acdc99bb85873807b3e902517a1764dabc7152e5ca9ad4d83ab5dc9d3a611f79e6c066121be77aed3cad1b0f3587b73
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0
+
+iQJiBAEBCABMBQJUpBHzRRSAAAAAABQAKGlzc3Vlci1mcHJAbm90YXRpb25zOTc5
+MTY5NkQ3RDM3NkRBN0U5QjZGMTUwMDZCMUYzOERDQTQ1QTFFQwAKCRAGsfONykWh
+7KjCD/4lWjVXsDlCls2JJN63S24dfY5hCvLJE3W8VdR9Nppihb3z2upFSbro4KSf
+pzKFqUwTsWn6zbeuTv9bUO482K3aLWM6/2HlU/UsldkS3EcvTLdFbs+REigj0KYa
+5sVia999Aga9bo8dfcsn2rEWHJ7PQDAGuVvpMbugbbMAPt25sbKIwbw0nFlX+ZK2
+wadP1446HnqMXz0S92XRXmIaFUlGz/wu4nd6q+xEHf1XxFAkP0IASqjIcdVeix3+
+7rKPjCFeB2Ep93lYuy+tV4bxXS0cm6h3Uoo3tBhF7YPEzdy1p9d+mNT+p5QzqGk7
+cs0jIq4w9LwNsb9cEcRuZhVbOnu37Ts0Yjg3JNA+ANA8y24Int0eAGs7JaDRHccF
+T8Fi+BuaaSffidbSlVezzRqHhf8+R8TjBzZud6LchxsYyMw1yXvKpSVeQGqtDN0U
+nkCO/MUAR+mRte4NqW8SA4ntaM7ID46tOtJA11JGllLTel5BxkRyp0WIqkn+y00c
+i77QUI0oOCMNc+Qnd9i0dNb6mFwHmgnhT7jzJNUPfUjGmthT9521rcZg3pjBmOQj
+Z0Xi89XhQ9DX4q1ZR27xDP0l5DL3OJ+bA5iWaLSJoViWfGnEwCIYPKA+OXS9O8m2
+Qof4fkSjz1vy8ErqSFoN6c1h4wL5wgpF/KJ4iZ95e3unK8UH+Q==
+=9K4p
+-----END PGP SIGNATURE-----
