@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/egypt
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/egypt/ChangeLog,v 1.8 2013/09/01 15:12:50 idella4 Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-util/egypt/ChangeLog,v 1.9 2014/12/31 15:28:43 kensington Exp $
+
+*egypt-1.10 (31 Dec 2014)
+
+  31 Dec 2014; Michael Palimaka <kensington@gentoo.org> +egypt-1.10.ebuild:
+  Version bump.
 
 *egypt-1.9-r1 (01 Sep 2013)
 
