@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/flawfinder
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/flawfinder/ChangeLog,v 1.18 2012/05/10 16:04:16 ago Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-util/flawfinder/ChangeLog,v 1.19 2014/12/31 15:10:26 kensington Exp $
+
+*flawfinder-1.31 (31 Dec 2014)
+
+  31 Dec 2014; Michael Palimaka <kensington@gentoo.org> +flawfinder-1.31.ebuild:
+  Version bump.
 
   10 May 2012; Agostino Sarubbo <ago@gentoo.org> -flawfinder-1.24.ebuild,
   -flawfinder-1.27-r1.ebuild:
