@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/cloc
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/cloc/ChangeLog,v 1.13 2014/06/03 11:04:47 nimiux Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/cloc/ChangeLog,v 1.14 2014/12/31 15:19:02 kensington Exp $
+
+*cloc-1.62 (31 Dec 2014)
+
+  31 Dec 2014; Michael Palimaka <kensington@gentoo.org> +cloc-1.62.ebuild:
+  Version bump.
 
   03 Jun 2014; Chema Alonso <nimiux@gentoo.org> cloc-1.60.ebuild:
   Stable for amd64 wrt bug #508384
